--- a/index.html
+++ b/index.html
@@ -10,26 +10,36 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/db4badba.main.css">
+        <link rel="stylesheet" href="styles/e60c1c34.main.css">
         <script src="scripts/vendor/f7f27360.modernizr.js"></script>
     </head>
-    <body>
-        <div class="container">
-            <div class="hero-unit" id="app-container">
-                <h1>'Allo, 'Allo!</h1>
-                <p>You now have</p>
-                <ul>
-                    <li>HTML5 Boilerplate</li>
-                </ul>
-                <p>installed.</p>
-                <h3>Enjoy coding! - Yeoman</h3>
+    <body class="light">
+        <div id="wrapper">
+            <div class="topcoat-navigation-bar">
+                <div class="topcoat-navigation-bar__item left quarter"></div>
+                <div class="topcoat-navigation-bar__item center half">
+                    <h1 class="topcoat-navigation-bar__title">Sample App</h1>
+                </div>
+            </div>
+            <div id="site">
+                <div id="content" class="max-width">
+                    <div class="">
+                        <div class="" id="app-container">
+                            <div class="topcoat-list__container">
+                                <h3 class="topcoat-list__header">Customers</h3>
+                                <ul class="topcoat-list" id="customers-list"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <script type="text/x-handlebars-template" id="customer">
-            <strong>{{ name }}</strong><br />
-            Title: {{ jobTitle }}<br />
-            email: <a href="mailto:{{email}}">{{ email }}</a>
+            <p><strong>{{ name }}</strong></p>
+            <p>Title: {{ jobTitle }}</p>
+            <a href="mailto:{{email}}" class="topcoat-button">{{ email }}</a>
+            <div class="action-icon icon-mail"></div>
         </script>
 
         <!--[if lt IE 7]>
@@ -50,6 +60,6 @@
 
         <script src="scripts/b6c3df09.main.js"></script>
 
-        <script src="scripts/a990d853.coffee.js"></script>
+        <script src="scripts/35b5abc2.coffee.js"></script>
 </body>
 </html>
